--- a/style.css
+++ b/style.css
@@ -1,13 +1,9 @@
 .mainContainer {
   display: grid;
-  grid-template-rows: 3;
-  grid-template-columns: 1;
 }
 
 .board {
   display: grid;
-  grid-template-rows: repeat(4, 1fr);
-  grid-template-columns: repeat(4, 1fr);
   width: 600px;
   height: 600px;
 }
@@ -15,12 +11,10 @@
 .row {
   display: grid;
   grid-auto-flow: column;
-  grid-column: span 4;
-  grid-row: span 1;
-  background-color: red;
 }
 
 .box {
+  border: 1px solid black;
 }
 
 .p {
