--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.mainContainer {
+.container {
   display: grid;
 }
 
@@ -6,6 +6,7 @@
   display: grid;
   width: 600px;
   height: 600px;
+  border: 1px solid black;
 }
 
 .row {
@@ -19,3 +20,22 @@
 .p {
   background-color: red;
 }
+
+.rangeContainer {
+  width: 100%;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 600px;
+  height: 2px;
+  background: black;
+  outline: none;
+  /* opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s; */
+}
+
+/* .slider:hover {
+  opacity: 1;
+} */
