--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+*{
+  margin: 0;
+}
+
+body {
+  background:  #dde1e7;
+
+}
+
 .mainContainer {
   display: grid;
   margin-top: 60px;
@@ -33,7 +42,7 @@
 .reset {
   grid-column: 7;
   justify-self: left;
-  margin-left: 10px;
+  margin-left: 5px;
 }
 
 
@@ -42,26 +51,31 @@
   display: grid;
   width: 600px;
   height: 600px;
-  border: 8px solid black;
   border-radius: 8px;
   margin: 0;
+  padding: 0;
+  border: 10px solid #c9ced4;
 
+
+  box-shadow: -3px -3px 7px #edeef0, 3px 3px 5px rgba(94, 104, 121, .5);
 }
 
 .row {
   display: grid;
   grid-auto-flow: column;
   margin: 0;
-  pading: 0;
+  padding: 0;
+
 }
 
 .box {
   margin: 0;
-  pading: 0;
+  padding: 0;
+  background-color: #c9ced4;
 }
 
 .grid-on {
-  border: 1px solid black;
+  border: 1px solid #c9ced4;
 }
 
 .p {
@@ -75,8 +89,13 @@
   grid-template-columns: repeat(14, 1fr);
   grid-template-rows: 1fr;
   align-items: center;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   border-radius: 8px;
+  margin-bottom: 20px;
+  background-color: #c9ced4;
+
+  /* background: #dde1e7; */
+  box-shadow: -3px -3px 7px #edeef0, 3px 3px 5px rgba(94, 104, 121, .5);
 
 }
 
